...
            MessageLookupByLibrary.simpleMessage("Select all Avax tokens"),
        "searchFilterSubtitleBEP":
            MessageLookupByLibrary.simpleMessage("Select all BEP tokens"),
        "searchFilterSubtitleCosmos":
            MessageLookupByLibrary.simpleMessage("Select all Cosmos Network"),
        "searchFilterSubtitleERC":
            MessageLookupByLibrary.simpleMessage("Select all ERC tokens"),
        "searchFilterSubtitleETC":
            MessageLookupByLibrary.simpleMessage("Select all ETC tokens"),
        "searchFilterSubtitleFTM":
            MessageLookupByLibrary.simpleMessage("Select all Fantom tokens"),
        "searchFilterSubtitleHCO":
            MessageLookupByLibrary.simpleMessage("Select all HecoChain tokens"),
...
            MessageLookupByLibrary.simpleMessage("Select all QRC tokens"),
        "searchFilterSubtitleSBCH":
            MessageLookupByLibrary.simpleMessage("Select all SmartBCH tokens"),
        "searchFilterSubtitleSLP":
            MessageLookupByLibrary.simpleMessage("Select all SLP tokens"),
        "searchFilterSubtitleSmartChain":
            MessageLookupByLibrary.simpleMessage("Select all SmartChains"),
        "searchFilterSubtitleTestCoins":
            MessageLookupByLibrary.simpleMessage("Select all Test Assets"),
        "searchFilterSubtitleUBQ":
            MessageLookupByLibrary.simpleMessage("Select all Ubiq coins"),
        "searchFilterSubtitleZHTLC":
            MessageLookupByLibrary.simpleMessage("Select all ZHTLC coins"),
        "searchFilterSubtitleutxo":
            MessageLookupByLibrary.simpleMessage("Select all UTXO coins"),
        "searchForTicker":
            MessageLookupByLibrary.simpleMessage("Search for Ticker"),
        "seconds": MessageLookupByLibrary.simpleMessage("s"),
        "security": MessageLookupByLibrary.simpleMessage("Security"),
        "seeOrders": m96,
        "seeTxHistory":
...
