...
                  Text(
                    AppLocalizations.of(context)
                        .enable(selected, remainingSpace - selected),
                    style: Theme.of(context).textTheme.subtitle2,
                  ),
                  PrimaryButton(
                    key: const Key('done-activate-coins'),
                    text: AppLocalizations.of(context).done,
                    isLoading: _isDone,
                    onPressed: isButtonActive ? _pressDoneButton : null,
                  )
                ]);
              }),
...
