...
                      return Padding(
                        padding: const EdgeInsets.all(16.0),
                        child: Padding(
                          padding: const EdgeInsets.all(16.0),
                          child: Center(
                              child: FloatingActionButton(
                            key: const Key('adding-coins'),
                            backgroundColor: Theme.of(context).primaryColor,
                            foregroundColor: Theme.of(context).accentColor,
                            child: Icon(
                              Icons.add,
                            ),
                            onPressed: () {
...
